--- a/articlesmostread/locale/pt_BR/locale.po
+++ b/articlesmostread/locale/pt_BR/locale.po
@@ -12,16 +12,16 @@ msgstr ""
 "Language: \n"
 
 msgid "plugins.blocks.mostRead.displayName"
-msgstr "Bloco de artigos mais lidos"
+msgstr "Bloco dos artigos mais lidos"
 
 msgid "plugins.blocks.mostRead.description"
 msgstr "Este plugin mostra artigos mais lidos na barra lateral."
 
 msgid "plugins.blocks.mostRead.blockTitle"
-msgstr "Mais lidos na semana passada"
+msgstr "Artigos mais lidos"
 
 msgid "plugins.blocks.mostRead.settings.title"
-msgstr "Configurações Most Read Block"
+msgstr "Configurações Articles Most Read Block"
 
 msgid "plugins.blocks.mostRead.settings.days"
 msgstr "Contagem de dias"
@@ -30,4 +30,4 @@ msgid "plugins.blocks.mostRead.settings.blockTitle"
 msgstr "Título do bloco"
 
 msgid "plugins.blocks.mostRead.settings.saved"
-msgstr "configurações do plug-in do bloco de artigos mais lido salvas"
+msgstr "Configurações do plug-in do bloco de artigos mais lido salvas"
